@@ -1,3 +1,9 @@
+2011-06-09  Nick Clifton  <nickc@redhat.com>
+
+	PR ld/12845
+	* emultempl/mipself.em (mips_add_stub_section): Do not add stubs
+	for sections that have been removed by garbage collection.
+
 2011-06-08  Alan Modra  <amodra@gmail.com>
 
 	* ldlang.c (lang_one_common): Handle warning symbols.
